@@ -14,13 +14,13 @@
 
 ---
 
-## Install Java 25
+## Install Java 21
 
-Java 25 LTS is managed via [mise](https://mise.jdx.dev/). The `mise.toml` at the project root pins the version:
+Java 21 LTS is managed via [mise](https://mise.jdx.dev/). The `mise.toml` at the project root pins the version:
 
 ```bash
 mise install
-java -version   # should show 25.x
+java -version   # should show 21.x
 ```
 
 If `java -version` shows an older version, activate mise in your shell:
@@ -43,7 +43,7 @@ This runs in order:
 
 1. **initialize** — configures `git core.hooksPath` to `.githooks/`
 2. **validate** — Spotless checks formatting (fails build if unformatted)
-3. **compile** — Java 25 with `--enable-preview`
+3. **compile** — Java 21
 4. **test** — ArchUnit (18 rules) + integration tests against H2
 5. **package** — Quarkus fast-jar build
 
@@ -92,27 +92,32 @@ docker build -t starter .
 docker run -p 8080:8080 --env-file .env starter
 ```
 
-Stage 1: `maven:3.9-eclipse-temurin-25` (build)
-Stage 2: `eclipse-temurin:25-jre-alpine` (runtime, non-root user)
+Stage 1: `maven:3.9-eclipse-temurin-21` (build)
+Stage 2: `eclipse-temurin:21-jre-alpine` (runtime, non-root user)
 
 ---
 
 ## Configuration Strategy
 
-| File                          | Location             | Contains                                    | Committed |
-|-------------------------------|----------------------|---------------------------------------------| ----------|
-| `application.properties`      | `src/main/resources` | Shared config (all environments)            | Yes       |
-| `application-dev.properties`  | `src/main/resources` | Dev overrides, external API URLs            | Yes       |
-| `application-test.properties` | `src/main/resources` | H2 datasource, disable JWT                 | Yes       |
-| `.env`                        | project root         | Secrets only (credentials)                  | No        |
+| File                                | Location             | Contains                                  | Committed |
+|-------------------------------------|----------------------|-------------------------------------------|-----------|
+| `application.properties`            | `src/main/resources` | Shared config (all environments)          | Yes       |
+| `application-dev.properties`        | `src/main/resources` | Local dev datasource (docker-compose DB)  | Yes       |
+| `application-test.properties`       | `src/main/resources` | H2 datasource, schema generation          | Yes       |
+| `application-staging.properties`    | `src/main/resources` | Staging profile (non-secret)              | Yes       |
+| `application-production.properties` | `src/main/resources` | Production profile (non-secret)           | Yes       |
+| `.env`                              | project root         | Secrets only (credentials)                | No        |
+
+Staging/production DB URL and credentials come from the **environment** at deploy time (Kamal
+`env.clear` / `env.secret`), never from a committed file. See CLAUDE.md §11.
 
 ### Why .env holds only secrets
 
 Environment variables from `.env` have the **highest priority** in Quarkus config resolution. No properties file can override them. So:
 
 - `.env` → only credentials (username, password) that are harmless if leaked to test (H2 accepts any credentials)
-- `application-dev.properties` → external API URLs, feature flags
-- `application-test.properties` → H2 datasource, schema generation, disabled JWT
+- `application-dev.properties` → local datasource overrides
+- `application-test.properties` → H2 datasource, schema generation
 
 This way `application-test.properties` cleanly overrides `application-dev.properties` without fighting `.env`.
 
